# rules_js_sandbox_repro

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  com_grail_bazel_toolchain.patch  mocha.bzl  package.json  pnpm-lock.yaml
repro/: BUILD.bazel  test.js
